@@ -1,1 +1,1 @@
-BasicBot is an open-source, Python-based Discord bot with basic functionality including youtube playback (with queue and search support) and Teamspeak-style VC join/leave messages, and keyword-based censoring! More features are planned (Role management). BasicBot is currently hosted with AWS EC2. Interested in how BasicBot works? The source code can be found at https://github.com/UnderscoreBrad/BasicBot_PY
+BasicBot is an open-source, Python-based Discord bot with basic functionality including youtube playback (with queue and search support) and Teamspeak-style VC join/leave messages, role management, and keyword-based censoring. BasicBot is currently hosted with AWS EC2. Interested in how BasicBot works? The source code can be found at https://github.com/UnderscoreBrad/BasicBot_PY
