@@ -1,3 +1,8 @@
+Changelog 2021 Jan 30:
+    -The bot can manage roles if given the right permissions
+    -!basic_add_role can be used to give a role (if the user's top role is higher)
+    -!basic_remove_role can be used to remove a role (if the user's top role is higher)
+
 Changelog 2021 Jan 29:
     -The bot leaves a voice channel if it is empty, without prompting
 
